# examples

./: CONTRIBUTING.md  README.md
01_job_hello_world/: README.md  main.py
02_service_hello_world/: README.md  main.py  query.py  service.yaml
03_dependency_management/uv/: Dockerfile  job.yaml  main.py  pyproject.toml
03_deploy_llama_3_1_8b/: README.md
03_deploy_llama_3_8b/: Dockerfile  README.md  query.py  serve_llama_3_1_8b.py  serve_llama_3_8b.py  service.yaml
04_deploy_llama_3_1_70b/: query.py  serve_llama_3_1_70b.py
04_deploy_llama_3_70b/: README.md  serve_llama_3_1_70b.py  service.yaml
05_deploy_deepseek_r1/: README.md  query.py  serve_deepseek_r1.py  service.yaml
06_deploy_structured_output/: Dockerfile  README.md  query.py  query_all.py  service.yaml
07_deploy_multi_lora/: query.py  serve_my_llama.py  serve_my_llama.yaml
07_deploy_tool_calling/: README.md  query.py  serve_my_llama.py  service.yaml
08_deploy_multi_lora/: Dockerfile  README.md  query.py  serve_my_llama.py  serve_my_llama.yaml  service.yaml
ask_llm_data_curation/: Dockerfile  README.md  job.yaml  main.py
cosmos_curate/: .gitignore  README.md  all_nodes_init_script.py  cosmos_curate_tokens.yaml  hello_world.yaml  model_download_worker.py  reference_pipeline.yaml  write_s3_creds_file.sh
cosmos_curate/docker/: anyscale-cosmos-curate.Dockerfile  build_and_push_anyscale.sh  build_anyscale.sh  build_cosmos.sh  cosmos-curate.Dockerfile  generate_dockerfile.sh  push_anyscale.sh
data_juicer_example/: Dockerfile  job.yaml  main.py
deduplication/: Dockerfile  job.yaml  ray_minhash_lsh_datajuicer.py
deepspeed/: Dockerfile  README.md  deepspeed_zero3.json  job.yaml  main.py
deploy_deepseek_r1/: Dockerfile  README.md  query.py  serve_deepseek_r1.py  service.yaml
deploy_llama_3_1_70b/: Dockerfile  README.md  query.py  serve.py  service.yaml
deploy_llama_3_8b/: README.md  query.py  serve_llama_3_1_8b.py  service.yaml
fast_model_loading_gcs_nvme/: Dockerfile  README.md  query.py  serve.py  serve_hf.py  serve_vllm.py  service.yaml  service_hf.yaml  service_vllm.yaml  upload_to_gcs.py
fast_video/: Dockerfile  serve_wan.py  serve_wan_and_gradio.py  service.yaml
fine_web_data_dedup/: Dockerfile  README.md  job.yaml
fine_web_data_processing/: job.yaml
fineweb_dedup/: Dockerfile  README.md  job.yaml  main.py
image_processing/: Dockerfile  Dockerfile.txt  README.md  job.yaml  process_images.py  run.sh
jax/: Dockerfile  README.md
jax_training/: Dockerfile  README.md  job.yaml  train.py
job_hello_world/: README.md  job.yaml
lerobot_datasource/: .gitignore  README.md  example.py  example_usage.ipynb  lerobot_datasource.py  lerobot_to_s3.py  main.py  pyproject.toml  test_datasource.py
megatron_ray_fault_tolerant/: .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  dispatch.py  file_io.py  job.yaml  main.py  megatron_actor.py  megatron_model_utils.py  megatron_model_wrapper.py  megatron_utils.py  optimizer.py  pyproject.toml  run.sh  timer.py  training_batch.py  utils.py
megatron_ray_fault_tolerant/diagnostics/: __init__.py  diagnostic_actor.py  runner.py
megatron_training/: Dockerfile  README.md  job.yaml  llm_sft_ray_train_megatron.py
miles_qwen3_8b_h100/: Dockerfile.anyscale  README.md  convert_weights_remote.py  entrypoint.sh  job.yaml
multi_region/: job.yaml  main.py
nemo_curator_semantic_dedup/: Dockerfile  README.md  helper.py  image_dedup_example.py  job.yaml
ray-train-megatron/: Dockerfile  README.md  job.yaml  llm_sft_ray_train_megatron.py
ray_data_robotics_droid_blip/: .gitignore  README.md  data.py  job.yaml  pipeline.py  pyproject.toml
ray_rdt/: test_rdt_weight_sync.py
rl_with_miles/: Dockerfile  README.md  convert_weights_remote.py  entrypoint.sh  job.yaml  train_remote.py
serve_tensor_parallel/: Dockerfile  README.md  main.py  query.py  service.yaml
service_hello_world/: README.md  service.yaml
sglang_inference/: Dockerfile  README.md  driver_offline.py  job.yaml  query.py  serve.py  service.yaml
sglang_ray_inference/: Dockerfile  README.md  driver_offline.py  driver_online.py  job_offline.yaml  job_online.yaml
skyrl/: Dockerfile  README.md  job.yaml  main.py  vlm-job.yaml
skyrl-vlm/: Dockerfile  README.md  job.yaml
slime_multi_node_rl/: Dockerfile.anyscale  README.md  anyscale-smoke-2node-a10g.sh  job.yaml  patch_all_nodes.py  run-qwen3-4B-smoke-2node-a10g.sh
spark_on_ray/: Dockerfile  README.md  job.yaml  main.py
stop_time_diagnostics/: job.yaml  main.py  pyproject.toml
stop_time_diagnostics/diagnostics/: __init__.py  actor.py  runner.py
swift_training/: Dockerfile  README.md  compute-4xL40S.yaml  job.yaml  llm_sft_ray_train_swift.py  requirements.txt
train_tensor_parallel/: README.md  args.py  common.py  job.yaml  train.py
video_curation/: README.md  job.yaml  stages.py  video_curation.py
video_curation_streaming/: Dockerfile  README.md  job.yaml  video_curation.py
video_generation_with_fastvideo/: Dockerfile  README.md  gradio_server.py  serve_fastvideo.py  serve_wan_and_gradio.py  service.yaml
video_shot_detection/: ray_data_patches.py  read_videos_with_resize.py  shot_detection.py  shot_detection_pipeline_v2.py  transnetv2.py  video_io.py
vla_fine_tuning/: README.md  job.yaml  lerobot_datasource.py  pyproject.toml  util.py  vla.ipynb  vla.py
wide_ep_dp_group_fault_tolerance/: README.md  dp_group_autoscaling_service.yaml  dp_group_fault_tolerance_demo.py  locustfile.py  requirements.txt
wide_ep_fault_tolerance/: README.md  dp_group_autoscaling_service.yaml  job.yaml  locustfile.py  run_locust.py  service.yaml
wide_ep_fault_tolerance/autoscaling/: service.yaml
wide_ep_fault_tolerance/fault_tolerance/: Dockerfile  deepseek-service.yaml  kill_worker_proc.py  service.yaml
