[project]
name = "lerobot_datasource"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface>=0.0.1",
    "huggingface-hub>=1.6.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "lerobot>=0.5.0",
    "pyarrow>=23.0.1",
    "ray>=2.54.0",
    "torchcodec>=0.10.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

