[project]
name = "lerobot_datasource"
version = "0.1.0"
description = "Ray Data Datasource for LeRobot v3 robotics datasets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "av>=14.0.0",
    "fsspec>=2024.1.0",
    "huggingface-hub>=0.30.0",
    "numpy>=1.26.0",
    "pyarrow>=18.0.0",
    "ray[data]>=2.40.0",
]

[dependency-groups]
dev = [
    "lerobot>=0.5.0",
    "pytest>=8.0.0",
    "torch>=2.0.0",
]

[tool.pytest.ini_options]
addopts = "-v"
